--- a/back-end/package.json
+++ b/back-end/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.7.5",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.4"
   },
