--- a/back-end/package.json
+++ b/back-end/package.json
@@ -24,6 +24,7 @@
     "@babel/core": "^7.6.4",
     "@babel/node": "^7.6.3",
     "@babel/preset-env": "^7.6.3",
+    "bcrypt": "^3.0.7",
     "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
