--- a/back-end/package.json
+++ b/back-end/package.json
@@ -31,7 +31,8 @@
     "mongoose": "^5.7.5",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.1",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
